# Projetos

./: .gitignore  banco de cores
Autonomo/: modulo16f628.asm  modulo16f628.c  modulo16f628.dbg  modulo16f628.dct  modulo16f628.dlt  modulo16f628.hex  modulo16f628.lst  modulo16f628.mcl  modulo16f628.mcppi  zona16f.dbg  zona16f.hex  zona16f.lst  zona16f.mcppi
Codigos para Kebal/Controlador_Kerbal_Rust/: Cargo.toml  rascunho.rs
Codigos para Kebal/Kerbal Lua e Rust/: dados.ldf  fases.lua  gerenciador_de_dados.lua  main.lua  teste.lua
Codigos para Kebal/Kerbal Lua e Rust/lib_rust/: Cargo.toml
Codigos para Kebal/Kerbal Lua e Rust/lib_rust/src/: fases_de_lancamento.rs  gerenciador_de_dados.rs  lib.rs
Codigos para Kebal/kebal_yueLua_krpcPython/: Dica_yue  e.wlua  janela.luastatic.c  run_script.lua  teste.lua
Codigos para Kebal/kerbalLua/: main.lua  strat_launch.lua
KerballPython/: HallKerball.py  Recuperação.py  janela.py  setup.py  test.py  text.py
Lista/: Script.js  document.html  style.css
Trabalhos_em_lua/Desafio/: audio.lua  calcmedia.lua  contaPalavra.lua  conversor.lua  criptografa.lua  descartavel.lua  funcaoQuadratica.lua  hello  hello.c  letras.lua  reserva.lua  somaMatriz.lua  tempfille.txt
cartela/: banco de cores  cartela.py
kebal_yueLua_krpcPython/: abortar.py  e.wlua  janela  lançar.py  main.py  pouso.py  subOrb.py  temp_file.txt  teste.py  teste2.wlua
kerbalLua/: janela.lua  janela.wlua  main.lua  tempfile.data  test2.lua  test2.wlua  teste.lua
lua/: combina.lua  conbinaCorrotina.lua  teste.lua
palavras/: palavras  palavras.py
(+117 files in other folders)
